# aooserver

./: CMakeLists.txt  README.md  aooserver.jucer  buildcmake.sh  setupcmake.sh
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/aooserver.xcodeproj/: project.pbxproj
Builds/MacOSX/aooserver.xcodeproj/project.xcworkspace/xcuserdata/jesse.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/aooserver.xcodeproj/xcuserdata/jesse.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/aooserver.xcodeproj/xcuserdata/jesse.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.cpp
JuceLibraryCode/modules/juce_audio_basics/buffers/: juce_AudioDataConverters.cpp  juce_AudioDataConverters.h  juce_AudioSampleBuffer.h  juce_FloatVectorOperations.cpp
JuceLibraryCode/modules/juce_audio_basics/midi/: juce_MidiMessageSequence.cpp  juce_MidiMessageSequence.h
JuceLibraryCode/modules/juce_audio_basics/mpe/: juce_MPEInstrument.cpp  juce_MPEInstrument.h  juce_MPESynthesiser.h
JuceLibraryCode/modules/juce_audio_basics/native/: juce_mac_CoreAudioLayouts.h
JuceLibraryCode/modules/juce_audio_basics/sources/: juce_BufferingAudioSource.cpp  juce_BufferingAudioSource.h  juce_MemoryAudioSource.cpp  juce_MemoryAudioSource.h  juce_PositionableAudioSource.h
JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
JuceLibraryCode/modules/juce_audio_formats/codecs/: juce_CoreAudioFormat.cpp  juce_FlacAudioFormat.cpp  juce_OggVorbisAudioFormat.cpp  juce_WavAudioFormat.cpp  juce_WindowsMediaAudioFormat.cpp
JuceLibraryCode/modules/juce_audio_formats/format/: juce_AudioFormatReaderSource.cpp  juce_AudioFormatReaderSource.h  juce_AudioFormatWriter.cpp  juce_AudioFormatWriter.h  juce_BufferingAudioFormatReader.cpp
JuceLibraryCode/modules/juce_core/: juce_core.cpp  juce_core.h
JuceLibraryCode/modules/juce_core/containers/: juce_AbstractFifo.h  juce_ArrayBase.h  juce_Enumerate.h  juce_Variant.h
JuceLibraryCode/modules/juce_core/files/: juce_AndroidDocument.h  juce_common_MimeTypes.cpp
JuceLibraryCode/modules/juce_core/maths/: juce_MathsFunctions.h
JuceLibraryCode/modules/juce_core/memory/: juce_HeapBlock.h  juce_Reservoir.h
JuceLibraryCode/modules/juce_core/native/: juce_AndroidDocument_android.cpp  juce_JNIHelpers_android.cpp  juce_Network_windows.cpp  juce_ObjCHelpers_mac.h  juce_android_AndroidDocument.cpp  juce_android_JNIHelpers.cpp  juce_android_Network.cpp  juce_curl_Network.cpp  juce_linux_Files.cpp  juce_linux_SystemStats.cpp  juce_mac_Files.mm  juce_mac_Network.mm  juce_mac_ObjCHelpers.h  juce_mac_SystemStats.mm  juce_posix_IPAddress.h  juce_posix_SharedCode.h  juce_posix_SharedCode.h.crap  juce_win32_Files.cpp  juce_win32_Network.cpp  juce_win32_SystemStats.cpp  juce_win32_Threads.cpp
JuceLibraryCode/modules/juce_core/native/java/: JuceAppActivity.java.new
JuceLibraryCode/modules/juce_core/network/: juce_IPAddress.cpp  juce_IPAddress.h  juce_Socket.cpp  juce_Socket.h
JuceLibraryCode/modules/juce_core/system/: juce_CompilerWarnings.h  juce_PlatformDefs.h  juce_StandardHeader.h  juce_SystemStats.cpp  juce_SystemStats.h
JuceLibraryCode/modules/juce_core/text/: juce_CharacterFunctions.h  juce_String.cpp
JuceLibraryCode/modules/juce_core/threads/: juce_Thread.cpp  juce_ThreadPool.h.crap
JuceLibraryCode/modules/juce_core/xml/: juce_XmlElement.cpp  juce_XmlElement.h
JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
JuceLibraryCode/modules/juce_events/: juce_events.cpp  juce_events.h
JuceLibraryCode/modules/juce_events/messages/: juce_ApplicationBase.cpp  juce_ApplicationBase.h  juce_ApplicationBase.h.crap  juce_Initialisation.h  juce_MessageManager.h
JuceLibraryCode/modules/juce_events/native/: juce_linux_Messaging.cpp  juce_mac_MessageManager.mm  juce_win32_Messaging.cpp
JuceLibraryCode/modules/juce_gui_basics/buttons/: juce_Button.cpp.crap  juce_Button.h.crap
JuceLibraryCode/modules/juce_gui_basics/widgets/: juce_TableListBox.h.rej  juce_TreeView.cpp.rej
Source/: Main.cpp
docker/: Dockerfile
